Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignNumObjNumObjField.quorum
class Main
    Number v
    v:SetValue(5.0)
    action Main
        Test(v)
    end

    action Test(Number var)
        if var:GetValue() = 5.0
            output "passed"
        end
    end
end
