Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjNumObj.quorum
class Main
    action Main
        Number v
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Boolean var)
    end
end
